Bug#14708: Inconsistent treatment of NULLs in LEFT JOINed FULLTEXT matching without index Don't rely on table->null_row when no index is used - it may be a multi-table search